- add b-container-wide.less - add portfolio item tags - add showreel block to main page in header block - change header styles, change header menu, - change styles for main page - change portfolio filter styles - change markup for main page - change markup for portfolio pages - change markup for portfolio item detail page

--- a/src/blocks/b-filter/b-filter.less
+++ b/src/blocks/b-filter/b-filter.less
@@ -34,10 +34,8 @@
 }
 
 .b-filter__item_active {
-	background: #fbfbfc;
-
 	.b-filter__title {
-		color: @text-color !important;
+		color: rgb(0, 143, 203) !important;
 		border-bottom-color: transparent !important;
 	}
 
