--- a/src/blocks/b-footer/b-footer.less
+++ b/src/blocks/b-footer/b-footer.less
@@ -10,6 +10,12 @@
 	@media (min-width: @screen-lg-min) {
 		padding-top: 72px;
 	}
+
+	&_tilda
+	{
+		padding-top : 0 !important;
+		padding-bottom : 0 !important;
+	}
 }
 
 .b-footer__logo {
