--- a/src/blocks/b-navbar/b-navbar.less
+++ b/src/blocks/b-navbar/b-navbar.less
@@ -1,145 +1,270 @@
 @import "variables.less";
 @import "mixins";
 
-.b-navbar {
-	border: none;
+.b-navbar
+{
+	position : relative;
+	border   : none;
 
-	@media (min-width: @grid-float-breakpoint) {
-		background: none;
-		margin-bottom: 68px;
-		overflow-x: hidden;
+	&__container
+	{
+		padding-left  : 15px;
+		padding-right : 15px;
+		.clearfix();
 	}
 
-	.navbar-collapse {
-		@media (min-width: @grid-float-breakpoint) {
-			//padding-left: 0;
-			//padding-right: 0;
-			//margin-left: -@navbar-padding-horizontal;
-		}
-	}
+	.b-navbar__outer
+	{
+		will-change : transform;
 
-	.navbar-toggle {
-		padding: 5px 10px;
-		border: 0;
-	}
+		&.b-navbar__outer_expanded
+		{
+			position   : fixed;
+			top        : 0;
+			left       : 0;
+			height     : 100% !important;
+			right      : 0;
+			background : @navbar-default-bg;
+			overflow-x : hidden;
+			overflow-y : auto !important;
+			border     : none;
+			z-index    : @zindex-navbar + 1;
 
-	.navbar-toggle .icon-bar {
-		width: 32px;
-		height: 4px;
-		border-radius: 2px;
-	}
+			.b-navbar__nav
+			{
+				display : none !important;
+			}
 
-	.navbar-toggle .icon-bar + .icon-bar {
-		margin-top: 5px;
-	}
-
-	@media (min-width: @grid-float-breakpoint) {
-		.navbar-brand {
-			padding: 0;
-			height: 53px;
-			margin-top: 54px;
-		}
-
-		.navbar-nav {
-			width: 450px;
-			margin-top: 49px;
-			margin-left: 18px;
-
-			& > li {
-				display: inline-block;
-				margin-bottom: 9px;
-				margin-left: 30px;
+			+ .b-navbar__heightFix
+			{
+				min-height : 94px;
+				display    : block;
 			}
 		}
 	}
 
-	@media (min-width: @screen-xl-min) {
-		.navbar-nav {
-			width: 490px;
-			margin-left: 33px;
+	&__nav
+	{
+		width      : 300px;
+		margin-top : -3px;
+		float      : left;
 
-			& > li {
-				margin-left: 40px;
+		& > li
+		{
+			display       : inline-block;
+			margin-bottom : 5px;
+			margin-left   : 10px;
+
+			> a
+			{
+				display         : inline-block;
+				padding         : 0;
+				line-height     : @line-height-base;
+
+				font-weight     : bold;
+				font-size       : 20px;
+				color           : @text-color;
+				text-decoration : none;
+				border-bottom   : 2px solid rgba(38, 50, 57, .05);
+
+				&:hover, &:active, &:focus
+				{
+					color               : #2980B9;
+					border-bottom-color : #2980B9;
+					text-decoration     : none;
+				}
 			}
 		}
 	}
 
-	.navbar-nav > li > a {
-		display: inline-block;
-		padding: 0;
-		line-height: @line-height-base;
+	&__left
+	{
+		float      : left;
+		margin-top : 54px;
+	}
+	&__right
+	{
+		float      : right;
+		margin-top : 54px;
+	}
 
-		font-weight: bold;
-		font-size: 24px;
-		color: @text-color;
-		text-decoration: none;
-		border-bottom: 2px solid rgba(38, 50, 57, .05);
+	&__btn
+	{
+		display        : inline-block;
+		vertical-align : middle;
+		font-weight    : bold;
+		text-align     : center;
 
-		&:hover, &:active, &:focus {
-			color: #2980b9;
-			border-bottom-color: #2980b9;
-
-			text-decoration: none;
+		&_order
+		{
+			font-size     : 20px;
+			line-height   : 10px;
+			padding       : 12px 12px 16px;
+			margin-bottom : 0;
+			margin-top    : 20px;
 		}
 	}
 
-	.navbar-btn {
-		font-weight: bold;
-		padding-left: 19px;
-		padding-right: 19px;
-		margin-right: 15px;
+	&__burger
+	{
+		margin-left    : 10px;
+		background     : none;
+		border         : none;
+		display        : inline-block;
+		vertical-align : middle;
+		text-align     : center;
+		width          : 40px;
+		height         : 40px;
+		outline        : none;
+		position       : relative;
+		cursor         : pointer;
 
-		@media (min-width: @grid-float-breakpoint) {
-			margin-top: 53px;
+		.burger-icon
+		{
+			position           : absolute;
+			left               : 6px;
+			right              : 6px;
+			background         : #252525;
+			display            : block;
+			height             : 3px;
+			width              : 28px;
+
+			-webkit-transition : all 0.25s cubic-bezier(.42, .23, 0, 1.08);
+			-moz-transition    : all 0.25s cubic-bezier(.42, .23, 0, 1.08);
+			-ms-transition     : all 0.25s cubic-bezier(.42, .23, 0, 1.08);
+			-o-transition      : all 0.25s cubic-bezier(.42, .23, 0, 1.08);
+			transition         : all 0.25s cubic-bezier(.42, .23, 0, 1.08);
+
+			&:nth-child(1)
+			{
+				top : 8px;
+			}
+			&:nth-child(2)
+			{
+				top : 18px;
+			}
+			&:nth-child(3)
+			{
+				top : 28px;
+			}
 		}
-		@media (min-width: @screen-xl-min) {
-			//margin-right: 15px;
+		&:hover
+		{
+			.burger-icon:nth-child(1)
+			{
+				-webkit-transform : translateY(-2px);
+				-moz-transform    : translateY(-2px);
+				-ms-transform     : translateY(-2px);
+				-o-transform      : translateY(-2px);
+				transform         : translateY(-2px);
+			}
+			.burger-icon:nth-child(3)
+			{
+
+				-webkit-transform : translateY(2px);
+				-moz-transform    : translateY(2px);
+				-ms-transform     : translateY(2px);
+				-o-transform      : translateY(2px);
+				transform         : translateY(2px);
+			}
+		}
+
+		&_expanded
+		{
+			.burger-icon
+			{
+				&:nth-child(1)
+				{
+					top               : 18px;
+					-webkit-transform : rotate(-45deg) !important;
+					-moz-transform    : rotate(-45deg) !important;
+					-ms-transform     : rotate(-45deg) !important;
+					-o-transform      : rotate(-45deg) !important;
+					transform         : rotate(-45deg) !important;
+				}
+				&:nth-child(2)
+				{
+					top               : 18px;
+					-webkit-transform : rotate(45deg);
+					-moz-transform    : rotate(45deg);
+					-ms-transform     : rotate(45deg);
+					-o-transform      : rotate(45deg);
+					transform         : rotate(45deg);
+				}
+				&:nth-child(3)
+				{
+					position : absolute;
+					top      : -100px;
+					opacity  : 0;
+				}
+			}
 		}
 	}
 
-	.navbar-collapse .navbar-header {
-		@media (min-width: @grid-float-breakpoint) {
-			display: none;
+	@media (min-width : @screen-sm-min)
+	{
+		&__container
+		{
+			padding-left  : 30px;
+			padding-right : 30px;
 		}
 	}
 
-	.navbar-collapse.in {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		background: @navbar-default-bg;
-		//background: linear-gradient(to right, #6e1478, #aa3282);
-		overflow-x: hidden;
-		overflow-y: auto;
-		border: none;
-		z-index: @zindex-navbar + 1;
+	@media (min-width : @screen-md-min)
+	{
+		margin-bottom : 90px;
 
-		.navbar-nav {
-			margin-top: 20px;
-			margin-bottom: 20px;
+		&__btn_order
+		{
+			margin-top : 0;
+		}
+	}
+	@media (min-width : @grid-float-breakpoint) // lg-min
+	{
+		overflow-x : hidden;
+
+		&__container
+		{
+			padding-left  : 75px;
+			padding-right : 75px;
 		}
 
-		.navbar-nav > li {
-			//border-width: 0 0 1px 0;
-			//border-image: linear-gradient(to right, #57105e, #902a6e) 100% 1;
-
-			display: block;
-			margin-bottom: 20px;
-			margin-left: 29px - 15px;
+		&__burger
+		{
+			margin-left : 20px;
 		}
 
-		.navbar-nav > li > a {
-			//padding-top: 26px;
-			//padding-bottom: 25px;
+	}
 
-			//padding-left: 29px;
+	@media (min-width : @screen-xl-min)
+	{
+		margin-bottom : 110px;
+
+		&__container
+		{
+			padding-left  : 100px;
+			padding-right : 100px;
 		}
 
-		.navbar-btn {
-			margin-left: -1px;
-			margin-bottom: 20px;
+		&__nav
+		{
+			width : auto;
+
+			> li
+			{
+				margin-top    : 10px;
+				margin-bottom : 0;
+
+				&:first-child
+				{
+					margin-left : 0;
+				}
+			}
+
+			> li + li
+			{
+				margin-left : 25px;
+			}
 		}
 	}
 }
