--- a/src/blocks/b-portfolio-filter/b-portfolio-filter.less
+++ b/src/blocks/b-portfolio-filter/b-portfolio-filter.less
@@ -2,137 +2,189 @@
 @import "mixins";
 @import "mymixins";
 
-.b-portfolio-filter {
-	text-align: center;
-	margin-top: 25px;
-	margin-bottom: 22px;
-}
+.b-portfolio-filter
+{
+	text-align    : center;
+	margin-top    : 25px;
+	margin-bottom : 20px;
+	position      : relative;
 
-.b-portfolio-filter__item {
-	.my-heading-h3();
+	&__head-label
+	{
+		display     : block;
+		color       : #C0C0C0;
+		font-family : @font-family-primary;
+		font-size   : 14px;
+		font-weight : 700;
+		line-height : 20px;
+		position    : relative;
+		z-index     : 5;
+		cursor      : pointer;
 
-	line-height: 28/24;
-	color: @text-color;
-	margin: 6px 25px;
-	display: inline-block;
-	position: relative;
+		&::before
+		{
+			content        : '';
+			display        : inline-block;
+			background     : url(../../assets/img/filter-gray.png) 0 0 no-repeat / contain;
+			width          : 15px;
+			height         : 20px;
+			vertical-align : middle;
+			margin-right   : 5px;
+		}
 
-	@media (min-width: @grid-float-breakpoint) {
-		margin: 0 25px;
-	}
+		> span
+		{
+			display        : inline-block;
+			vertical-align : middle;
+			border-bottom  : 1px dotted #E6E6E6;
+			letter-spacing : 3px;
+		}
 
-	&:not(.b-portfolio-filter__item_active) .b-portfolio-filter__title {
-		border-bottom-color: rgba(37, 37, 37, .05);
-	}
+		&:hover > span
+		{
+			border-color : transparent;
+		}
 
-	&:hover, &:active, &:focus {
-		text-decoration: none;
-	}
-}
-
-.b-portfolio-filter__item_type_all {
-	@filter-type-color: #acc000;
-
-	&:hover, &:active, &:focus {
-		color: @filter-type-color;
-
-		.b-portfolio-filter__title {
-			border-bottom-color: @filter-type-color;
+		@media (max-width : @screen-xs-max)
+		{
+			font-size : 12px;
 		}
 	}
-
-	&.b-portfolio-filter__item_active {
-		color: @filter-type-color;
-
-		&:before {
-			background: @filter-type-color center center no-repeat url("../../assets/img/portfolio-filter-active.png");
-		}
-	}
-}
-
-.b-portfolio-filter__item_type_html5 {
-	@filter-type-color: #9b59b6;
-
-	&:hover, &:active, &:focus {
-		color: @filter-type-color;
-
-		.b-portfolio-filter__title {
-			border-bottom-color: @filter-type-color;
-		}
-	}
-
-	&.b-portfolio-filter__item_active {
-		color: @filter-type-color;
-
-		&:before {
-			background: @filter-type-color center center no-repeat url("../../assets/img/portfolio-filter-active.png");
-		}
-	}
-}
-
-.b-portfolio-filter__item_type_gif {
-	@filter-type-color: #008fcb;
-
-	&:hover, &:active, &:focus {
-		color: @filter-type-color;
-
-		.b-portfolio-filter__title {
-			border-bottom-color: @filter-type-color;
-		}
+	&__container
+	{
+		display            : inline-block;
+		visibility         : hidden;
+		opacity            : 0;
+		position           : absolute;
+		top                : 0;
+		margin             : -22px 0 0;
+		padding            : 60px 15px 15px;
+		background         : #FFF;
+		border-radius      : 10px;
+		box-shadow         : 3px 5.2px 65px rgba(0, 0, 0, 0.1);
+		z-index            : 4;
+		-webkit-transform  : translateX(-50%) scale(0.7);
+		-moz-transform     : translateX(-50%) scale(0.7);
+		-ms-transform      : translateX(-50%) scale(0.7);
+		-o-transform       : translateX(-50%) scale(0.7);
+		transform          : translateX(-50%) scale(0.7);
+		-webkit-transition : all 0.05s linear;
+		-moz-transition    : all 0.05s linear;
+		-ms-transition     : all 0.05s linear;
+		-o-transition      : all 0.05s linear;
+		transition         : all 0.05s linear;
+		will-change        : transform, opacity;
 	}
 
-	&.b-portfolio-filter__item_active {
-		color: @filter-type-color;
-
-		&:before {
-			background: @filter-type-color center center no-repeat url("../../assets/img/portfolio-filter-active.png");
-		}
+	&__head-label:hover + &__container,
+	&__container:hover
+	{
+		opacity            : 1;
+		visibility         : visible;
+		-webkit-transform  : translateX(-50%) scale(1);
+		-moz-transform     : translateX(-50%) scale(1);
+		-ms-transform      : translateX(-50%) scale(1);
+		-o-transform       : translateX(-50%) scale(1);
+		transform          : translateX(-50%) scale(1);
+		-webkit-transition : all 0.12s linear;
+		-moz-transition    : all 0.12s linear;
+		-ms-transition     : all 0.12s linear;
+		-o-transition      : all 0.12s linear;
+		transition         : all 0.12s linear;
 	}
-}
-
-.b-portfolio-filter__item_type_jpg {
-	@filter-type-color: #2ecc71;
-
-	&:hover, &:active, &:focus {
-		color: @filter-type-color;
-
-		.b-portfolio-filter__title {
-			border-bottom-color: @filter-type-color;
-		}
-	}
-
-	&.b-portfolio-filter__item_active {
-		color: @filter-type-color;
-
-		&:before {
-			background: @filter-type-color center center no-repeat url("../../assets/img/portfolio-filter-active.png");
-		}
+	&__inner
+	{
+		display          : inline-block;
+		background-color : rgb(249, 249, 249);
+		border-radius    : 5px;
+		white-space      : nowrap;
 	}
 }
 
-.b-portfolio-filter__item_active {
-	.b-portfolio-filter__title {
-		border-bottom-color: transparent !important;
+.b-portfolio-filter__item
+{
+	font-size             : 16px;
+	line-height           : 28/24;
+	color                 : rgb(37, 37, 37);
+	padding               : 8px 14px;
+	display               : inline-block;
+	position              : relative;
+	-webkit-border-radius : 5px;
+	-moz-border-radius    : 5px;
+	border-radius         : 5px;
+	-webkit-transition    : all .35s;
+	-moz-transition       : all .35s;
+	-ms-transition        : all .35s;
+	-o-transition         : all .35s;
+	transition            : all .35s;
+	margin-right          : -2px;
+
+	&:hover,
+	&:active,
+	&:focus
+	{
+		text-decoration  : none;
+		color            : rgb(37, 37, 37);
+		background-color : rgb(240, 240, 240);
 	}
 
-	&:before {
-		position: absolute;
-		top: 50%;
-		transform: translateY(-10px);
-		left: -20px;
-		width: 17px;
-		height: 17px;
+	@media (max-width : @screen-xs-max)
+	{
+		padding : 8px 10px;
+	}
+	@media (min-width : @screen-sm-min)
+	{
+		font-size    : 18px;
+		padding      : 10px 26px;
+		margin-right : 0;
 
-		content: '';
+		& + .b-portfolio-filter__item
+		{
+			margin-left : 2px;
+		}
+	}
+
+	@media (min-width : @screen-md-min)
+	{
+		font-size : 20px;
+	}
+
+	@media (min-width : @grid-float-breakpoint)
+	{
+		font-size : 24px;
 	}
 }
 
-.b-portfolio-filter__title {
-	margin-right: 6px;
-	display: inline-block;
-	border-bottom: 2px dotted transparent;
+.b-portfolio-filter__title
+{
+	margin-right  : 6px;
+	display       : inline-block;
+	border-bottom : 2px dotted transparent;
+
+	@media (max-width : @screen-xs-max)
+	{
+		margin-right : 4px;
+	}
 }
 
-.b-portfolio-filter__count {
-	color: rgba(37, 37, 37, .15);
+.b-portfolio-filter__count
+{
+	color     : #D9D9D9;
+	font-size : 13px;
+
+	@media (min-width : @screen-sm-min)
+	{
+		font-size : inherit;
+	}
+}
+
+.b-portfolio-filter__item_active
+{
+	background-color : rgb(0, 216, 114) !important;
+	color            : #FFF !important;
+
+	.b-portfolio-filter__count
+	{
+		color : #4DE49D !important;
+	}
 }
