--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -39,83 +39,37 @@
 .b-portfolio-item__lead {
 	font-size: 20px;
 	color: @text-muted;
-
-	margin: 20px -15px;
-
-	display: flex;
-	flex-flow: row wrap;
+	margin: 20px 0;
 
 	@media (min-width: @grid-float-breakpoint) {
 		font-size: 24px;
-		margin: 45px - 6px -16px;
+		margin: 45px 0 20px;
 	}
 }
 
 .b-portfolio-item__info {
-	display: inline-block;
-	margin: 6px 15px;
-	width: 100%;
-
-	@media (min-width: @screen-sm-min) {
-		width: ~"calc(100% / 2 - 16px * 2)";
-	}
+	display: block;
+	margin: 0 0 12px;
 	@media (min-width: @grid-float-breakpoint) {
 		line-height: 28px;
-		margin: 6px 16px;
-	}
-	@media (min-width: @screen-xl-min) {
-		width: auto;
 	}
 }
 
-.b-portfolio-item__info_category {
-	@media (min-width: @screen-sm-min) {
-		order: 1;
-		width: ~"calc(70% - 16px * 2)";
-	}
-	@media (min-width: @screen-xl-min) {
-		order: 1;
-		width: auto;
-	}
-}
+.b-portfolio-item__info_category {}
 
-.b-portfolio-item__info_style {
-	@media (min-width: @screen-sm-min) {
-		order: 3;
-		width: ~"calc(70% - 16px * 2)";
-	}
-	@media (min-width: @screen-xl-min) {
-		order: 2;
-		width: auto;
-	}
-}
+.b-portfolio-item__info_style {}
 
 .b-portfolio-item__info_date {
-
 	@media (min-width: @screen-sm-min) {
-		width: ~"calc(30% - 16px * 2)";
-		order: 2;
 		text-align: right;
-	}
-
-	@media (min-width: @screen-xl-min) {
-		order: 3;
-		flex: 1 0 auto;
-		text-align: right;
-		width: auto;
 	}
 }
 
 .b-portfolio-item__info_share {
 	padding: 2px 0;
 
-	@media (min-width: @screen-sm-min) {
-		order: 4;
-		width: ~"calc(30% - 16px * 2)";
-	}
 	@media (min-width: @screen-xl-min) {
 		padding: 1px 0;
-		width: auto;
 	}
 }
 
