--- a/src/blocks/b-social-links/b-social-links.less
+++ b/src/blocks/b-social-links/b-social-links.less
@@ -4,8 +4,13 @@
 .b-social-links {
 	display: flex;
 	flex-flow: row wrap;
-
 	margin: 32px auto 0;
+
+	&_header-nav
+	{
+		width  : 160px !important;
+		margin : 32px 0;
+	}
 
 	@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
 		margin-top: 0;
@@ -22,8 +27,18 @@
 	justify-content: center;
 	padding: 10px 0;
 
+	.b-social-links.b-social-links_header-nav &
+	{
+		flex-basis : 100%/3;
+	}
+
 	@media (min-width: @screen-md-min) {
 		flex-basis: 100%/3;
+	}
+
+	.b-social-links.b-social-links_header-nav &
+	{
+		justify-content : center;
 	}
 }
 
@@ -42,6 +57,11 @@
 	width: 35px;
 	height: 20px;
 
+	&.b-social-links__link_dark
+	{
+		background-image: url("../../assets/img/social-links/dark/Vk.svg");
+	}
+
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/social-links/hover/Vk.svg");
 	}
@@ -53,6 +73,11 @@
 	background-image: url("../../assets/img/social-links/Facebook.svg");
 	width: 16px;
 	height: 28px;
+
+	&.b-social-links__link_dark
+	{
+		background-image: url("../../assets/img/social-links/dark/Facebook.svg");
+	}
 
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/social-links/hover/Facebook.svg");
@@ -67,6 +92,11 @@
 	width: 30px;
 	height: 24px;
 
+	&.b-social-links__link_dark
+	{
+		background-image: url("../../assets/img/social-links/dark/Twitter.svg");
+	}
+
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/social-links/hover/Twitter.svg");
 	}
@@ -78,6 +108,11 @@
 	background-image: url("../../assets/img/social-links/Instagram.svg");
 	width: 30px;
 	height: 30px;
+
+	&.b-social-links__link_dark
+	{
+		background-image: url("../../assets/img/social-links/dark/Instagram.svg");
+	}
 
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/social-links/hover/Instagram.svg");
@@ -91,6 +126,11 @@
 	width: 27px;
 	height: 30px;
 
+	&.b-social-links__link_dark
+	{
+		background-image: url("../../assets/img/social-links/dark/YouTube.svg");
+	}
+
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/social-links/hover/YouTube.svg");
 	}
@@ -102,6 +142,11 @@
 	background-image: url("../../assets/img/social-links/Spark.svg");
 	width: 31px;
 	height: 30px;
+
+	&.b-social-links__link_dark
+	{
+		background-image: url("../../assets/img/social-links/dark/Spark.svg");
+	}
 
 	&:hover, &:active, &:focus {
 		background-image: url("../../assets/img/social-links/hover/Spark.svg");
