--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -12,7 +12,7 @@ head
         link(rel='stylesheet', href='assets/css/bootstrap.min.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick-theme.css')
-        link(rel='stylesheet', href='assets/vendor/fancybox/source/jquery.fancybox.css?v=2.1.5', media='screen')
+        link(rel='stylesheet', href='assets/vendor/fancybox/dist/jquery.fancybox.min.css?v=3.3.5', media='screen')
         //link(rel='stylesheet', href='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=2.1.5', media='screen')
         link(rel='stylesheet', href='assets/vendor/odometer/themes/odometer-theme-minimal.css')
         link(rel='stylesheet', href='assets/vendor/jquery.scrollbar/jquery.scrollbar.css')
@@ -24,8 +24,8 @@ head
         script(src='assets/vendor/masonry/dist/masonry.pkgd.min.js')
         script(src='assets/vendor/slick-carousel/slick/slick.min.js')
         script(src='assets/vendor/retina.js/dist/retina.min.js')
-        script(src='assets/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.5')
-        script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
+        script(src='assets/vendor/fancybox/dist/jquery.fancybox.min.js?v=3.3.5')
+        //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
         //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')
         script(src='assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js')
         //script(src='assets/vendor/odometer/odometer.min.js')
