--- a/src/templates/portfolio_type_4.jade
+++ b/src/templates/portfolio_type_4.jade
@@ -2,6 +2,24 @@ extends ./layouts/layout.jade
 
 block content
     .b-page
+        .b-portfolio-filter.b-portfolio__filter
+            span.b-portfolio-filter__head-label
+                span ФИЛЬТР ПО ТИПУ БАННЕРОВ
+            .b-portfolio-filter__container
+                .b-portfolio-filter__inner
+                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_all.b-portfolio-filter__item_active(href='#')
+                        span.b-portfolio-filter__title Все
+                        span.b-portfolio-filter__count 985
+                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_html5(href='#')
+                        span.b-portfolio-filter__title HTML5
+                        span.b-portfolio-filter__count 128
+                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_gif(href='#')
+                        span.b-portfolio-filter__title GIF
+                        span.b-portfolio-filter__count 191
+                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_jpg(href='#')
+                        span.b-portfolio-filter__title JPG
+                        span.b-portfolio-filter__count 266
+
         h1.b-page__title В портфолио 985 баннеров
 
         .b-filter
@@ -51,20 +69,6 @@ block content
 
         .b-portfolio
             h5.b-portfolio__header Баннеры размером 240x400 пикселей
-
-            .b-portfolio-filter.b-portfolio__filter
-                a.b-portfolio-filter__item.b-portfolio-filter__item_type_all.b-portfolio-filter__item_active(href='#')
-                    span.b-portfolio-filter__title Все
-                    span.b-portfolio-filter__count 985
-                a.b-portfolio-filter__item.b-portfolio-filter__item_type_html5(href='#')
-                    span.b-portfolio-filter__title HTML5
-                    span.b-portfolio-filter__count 128
-                a.b-portfolio-filter__item.b-portfolio-filter__item_type_gif(href='#')
-                    span.b-portfolio-filter__title GIF
-                    span.b-portfolio-filter__count 191
-                a.b-portfolio-filter__item.b-portfolio-filter__item_type_jpg(href='#')
-                    span.b-portfolio-filter__title JPG
-                    span.b-portfolio-filter__count 266
 
             .b-portfolio__list
                 - for (var i=0; i<12;++i)
